DevOCL/src/objects/CLQ_County__c.object
<CustomObject>
    <description>List of OH county a Organization/Program can operate from</description>
    <fields>
        <fullName>Area_Region__c</fullName>
        <label>Area/Region</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCC_Field_Officers__c</fullName>
        <label>CCC Field Officers</label>
        <picklist>
            <picklistValues>
                <fullName>Akron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for County object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FCC_Field_officers__c</fullName>
        <label>FCC Field officers</label>
        <picklist>
            <picklistValues>
                <fullName>Akron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Group__c</fullName>
        <inlineHelpText>Exact name of public group of supervisors responsible for this county</inlineHelpText>
        <label>Supervisor Group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>